force-app/main/default/objects/Product__c/fields/Farmer__c.field-meta.xml
<CustomField>
    <fullName>Farmer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farmer</label>
    <referenceTo>Farmer__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>